--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Log in</title>
+  <meta charset="UTF-8">
+  <title>Twitter Feed</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
   <link rel="stylesheet" href="/custom.css">
@@ -10,8 +10,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/custom.js"></script>
 </head>
+
 <body>
 <div class="container">
+  <div th:replace="fragments/navbar"></div>
   <h2>Tweets</h2>
   <div th:each="tweet:${tweetList}">
     <h5>@<span th:text="${tweet.user.username}"></span>
@@ -20,4 +22,5 @@
   </div>
 </div>
 </body>
+
 </html>
